# sotDCS

./: .gitignore  CMakeLists.txt  layer.vsdx  partitions.csv  sdkconfig  sdkconfig.old
components/ads131e0x/: CMakeLists.txt  ads131e0x.c  ads131e0x.h  ads131e0x_hal.c  ads131e0x_hal.h
components/beep/: CMakeLists.txt  beep.c  beep.h
components/ble/: CMakeLists.txt  gatts_server.c  gatts_server.h  gatts_table_creat_demo.c  gatts_table_creat_demo.h
components/button/: CMakeLists.txt  button.c  button.h
components/calibration/: CMakeLists.txt  calibration.c  calibration.h
components/config/: config.c  config.h
components/current/: CMakeLists.txt  cur_output.c  cur_output.h
components/dac8562/: CMakeLists.txt  dac8562.c  dac8562.h  dac8562_hal.c  dac8562_hal.h
components/e_pres/: CMakeLists.txt  e_pres.c  e_pres.h
components/iir/: CMakeLists.txt  fdacoefs.h  iir.c  iir.h
components/includes_common/: includes_common.h
components/sequence/: CMakeLists.txt  seq.c  seq.h  seq_common.c  seq_common.h
components/sequence/CES/: ces_gseq.c  ces_gseq.h  gen_seq_ces.c
components/sequence/rtACS/: gen_seq_rtacs.c  rtacs_gseq.c  rtacs_gseq.h
components/sequence/tACS/: tacs_gseq.c  tacs_gseq.h  tacs_para_table.c
components/sequence/tDCS/: tdcs_gseq.c  tdcs_gseq.h
components/waveform/: CMakeLists.txt  wave_common.c  wave_common.h  waveform.h
components/waveform/CES/: ces.c  ces.h
components/waveform/rtACS/: rtacs.c  rtacs.h
components/waveform/tACS/: tacs.c  tacs.h
components/waveform/tDCS/: tdcs.c  tdcs.h
components/window/: CMakeLists.txt  dispwin.c  dispwin.h  win_basic.c  win_basic.h  win_ces.c  win_debug.c  win_home_ces.c  win_home_tdcs.c  win_monitor.c  win_rtacs.c  win_tacs.c  win_tdcs.c
main/: CMakeLists.txt  main.c
(+33 files in other folders)
